--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
         <article class="">
             {% for post in site.posts %}
             <li class="article-name">
-                <a href="{{ post.url }}">{{ post.title }}</a> by {{post.author }}
+                <a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a> by {{post.author }}
                 <time class="text-align-end">{{ post.date | date: "%b %d, %Y" }}</time>
             </li>
            
