--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,34 @@
-<header>
-    <div class="col-1">
-        <p>In a Sideways Manner<br>Bulletin 1, 1.11.2023
-        </p>
+<header id="side">
+<div class="grid-header">
+    <div class="grid-item">
+        <ol>
+         <li>Bulletin 1 <i>Sideways</i> by Laura Martens on 1.11.2023</li>
+          <li>Bulletin 2 <i>Image is text and the otherway around</i> by João Pedro Nogueira on 2.11.2023</li>
+        </ol>
     </div>
-    <div class="col-2">
-    <p>... is bi-weekly publishing platform that documents the current activities, research and writing
-        by students of the MA graphic design program at the Estonian College of Arts in Tallinn, Estonia.</p>
+    <div class="grid-item">
+        <ol>
+            <li>Additional bulletin in support for Palestine on 3.11.2023</li>
+            <li>Bulletin 3 <i>Creative stuttering</i> by Fatima-Ezzahra El Khammas on 6.112023</li>
+        </ol>
     </div>
-
-    <div class="col-3">
-        <p>Readings from a Sideways Manner<br>Laura Martens </p>
+    <div class="grid-item">
+        <ol>
+        <li>Bulletin 4 <i>You wouldn’t steal a car, torrent a film or reproduce a book</i> by Linnea Lindgren on 7.11.2023</li>
+        </ol>
     </div>
-
-    <div class="side-note">
-        <p class="content-box">When Woolf is finally able to tear herself away from the rubbish heap of old letters and diaries, it is to read poetry, and, again invoking the writerly reader, she says, “the time to read poetry is when we are almost able to write it.” (Elsewhere, in her diary, she inverts this statement to similar ends: “The most successful reading leaves me with the impulse to write it all over again,” which reminds me again of Barthes. In another beautiful passage in The Pleasure of the Text, he says that his best ideas come to him in a sideways manner while in the presence of someone he loves, and that his most creative reading is oblique or distracted, when he is led to “look up often, to listen to something else.” One could argue this is a doubtful sort of reading since the reader perhaps failed to connect with the writer. On the other hand, how can we object to a reading that is so generative, so capable of spawning the seeds of future texts? I might add, this oblique mode of reading is often how I read Barthes himself, with a sort of free-floating attentiveness to the page and a diffusion of consciousness that tends to set me thinking about my own work and ideas as much as his.)
-        —The Problem With Reading, Index Cards, Moyra Davey</P>
-        </div>
+    <div class="grid-item">
+        <ol>
+           <li>Bulletin 5 <i>(Untitled); Parts _, _, _</i> by Hanafi Gazali on 8.11.2023</li>
+            <li>Bulletin 6 <i>Marx on a bicycle on a board in a school</i> by Rok Ifko Krajnc on 9.11.2023</li>
+        </ol>
+    </div>
+    <div class="grid-item">
+        <ol>
+            <li>Bulletin 7 <i>Self-still-life at 24</i> by Archil Tsereteli on 10.11.2023</li>
+            <li>Bulletin 8 <i>Fascinating obscurity of iron curtain</i> by Karthik Palepu on 13.11.2023</li>
+         </ol>
+    </div>
+    <div class="grid-item"></div>
+</div>
  </header>
