--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@
             
            
                 <figure>
-                <img src="{{ post.image }}" alt="">
+                <img src="{{site.baseurl}}{{ post.image }}" alt="">
                 <figcaption>
                 <a href="{{site.baseurl}}{{ post.file }}">{{ post.title }}</a><br>by {{post.author }}
                 <time class="text-align-end">{{ post.date | date: "%b %d, %Y" }}</time>
