--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,19 +15,18 @@
 </head>
 <body class="{{ page.title }}">
    
+
     
     <svg id="svg" viewBox="0 0 1050 850">
        
-        <path id="rectangle" d="M 10 10 H 1020 V 550 H 10 Z" fill="transparent"/>
+        <path id="rectangle" d="M 10 10 H 1040 V 570 H 10 Z" fill="transparent"/>
        
         <text>
            
           <textPath id="sideNote" href="#rectangle" style="font-size: 0.8rem;">In a sideways manner is a bi-weekly publishing platform that documents the current activities, research and writing by students of the MA graphic design program at the Estonian Academy of Arts in Tallinn, Estonia.
-           <!-- <animate attributeName="startOffset" from="-40%" to="250%" begin="0s" dur="20s" repeatCount="indefinite"></animate>--></textPath>
+            <!--<animate attributeName="startOffset" from="-40%" to="250%" begin="0s" dur="20s" repeatCount="indefinite"></animate>--></textPath>
         </text>
-       
       </svg>
-    
 
     
   <div class="" id="parent">
@@ -36,7 +35,7 @@
             {% for post in site.posts %}
             
            
-                <figure style="padding-top: 20px;">
+                <figure>
                 <img src="{{site.baseurl}}{{ post.image }}" alt="">
                 <figcaption>
                 <a href="{{site.baseurl}}{{ post.file }}">{{ post.title }}</a><br>by {{post.author }}
@@ -48,9 +47,7 @@
             {% endfor %}
         </div>
    
-       
-
-       
+    
     </div>              
           
 
@@ -64,36 +61,38 @@
 </html>
 
 <script>
+  let svg = document.getElementById("svg");
+  let rectangle = document.getElementById("rectangle");
+  let rectangleLength = rectangle.getTotalLength();
+  let sideNote = document.getElementById("sideNote");
+  
+  function updateTextPathOffset(offset) {
+    sideNote.setAttribute("startOffset", offset);
+  }
+  
+  function move() {
+    requestAnimationFrame(function () {
+      // Calculate scroll position based on the scroll amount
+      let scrollAmount = window.scrollX; // Adjust the divisor to control the scroll speed
+      let scrollPosition = scrollAmount % rectangleLength;
+  
+      // Calculate the adjusted startOffset
+      let adjustedOffset = (scrollPosition + rectangleLength) % rectangleLength;
+  console.log(adjustedOffset);
+      // Update the text position
+      updateTextPathOffset(adjustedOffset);
+  
+      move(); // Call the move function recursively for continuous animation
+    });
+  }
+  
+  // Add an event listener to trigger the move function on scroll
+  window.addEventListener("scroll", move);
+  
 
-//move text on scroll
-let svg = document.getElementById("svg");
+  </script>
 
-let rectangle = document.getElementById("rectangle");
-let rectangleLength = rectangle.getTotalLength();
-let sideNote = document.getElementById("sideNote");
-let scrollPosition = 0;
-
-
-function updateTextPathOffset(offset) {
-  sideNote.setAttribute("startOffset", offset);
-}
-
-function move() {
-  let margin = 2; //this is to ensure the text goes beyond the end of the path
-
-  requestAnimationFrame(function () {
-    let scrollPosition = window.scrollX;
-
-    if (scrollPosition <= rectangleLength + margin) {
-      updateTextPathOffset(scrollPosition);
-    }
-
-  });
-}
-
-
-
-window.addEventListener("scroll", move);
-
-
-</script>
+  
+  
+  
+  
