--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,19 +15,22 @@
 </head>
 <body class="{{ page.title }}">
     
-    <svg id="svg" viewBox="0 0 1050 850">
+ 
+  <svg id="svg" viewBox="0 0 1050 850">
        
-        <path id="rectangle" d="M 10 10 H 1040 V 570 H 10 Z" fill="transparent"/>
-       
-        <text>
-          <textPath id="sideNote2" href="#rectangle"  style="font-size: 0.8rem;" startOffset="0">In a sideways manner is a bi-weekly publishing platform that documents the current activities, research and writing by students of the MA graphic design program at the Estonian Academy of Arts in Tallinn, Estonia.
-            <!--<animate attributeName="startOffset" from="-40%" to="250%" begin="0s" dur="20s" repeatCount="indefinite"></animate>--></textPath>
-          <textPath id="sideNote" href="#rectangle" style="font-size: 0.8rem;" startOffset="0">In a sideways manner is a bi-weekly publishing platform that documents the current activities, research and writing by students of the MA graphic design program at the Estonian Academy of Arts in Tallinn, Estonia.
-            <!--<animate attributeName="startOffset" from="-40%" to="250%" begin="0s" dur="20s" repeatCount="indefinite"></animate>--></textPath>
-        </text>
-      </svg>
+    <path id="rectangle" d="M 10 10 H 1040 V 570 H 10 Z" fill="transparent"/>
+   
+    <text>
+      <textPath id="sideNote2" href="#rectangle"  style="font-size: 0.8rem;" startOffset="0">In a sideways manner&ensp;...&ensp; is a bi-weekly publishing platform that documents the current activities, research and writing by students of the MA graphic design program at the Estonian Academy of Arts in Tallinn, Estonia.
+        <!--<animate attributeName="startOffset" from="-40%" to="250%" begin="0s" dur="20s" repeatCount="indefinite"></animate>--></textPath>
+      <textPath id="sideNote" href="#rectangle" style="font-size: 0.8rem;" startOffset="0">In a sideways manner&ensp;...&ensp; is a bi-weekly publishing platform that documents the current activities, research and writing by students of the MA graphic design program at the Estonian Academy of Arts in Tallinn, Estonia.
+        <!--<animate attributeName="startOffset" from="-40%" to="250%" begin="0s" dur="20s" repeatCount="indefinite"></animate>--></textPath>
+    </text>
+  </svg>
+   
+      
+  
 
-    
   <div class="" id="parent">
 
         <div class="grid">
@@ -55,7 +58,7 @@
 
             
     </div>
-    {% include footer.html %}
+   
 </body>
 </html>
 
