--- a/css/index.css
+++ b/css/index.css
@@ -82,8 +82,13 @@ svg {
 
 
 
-@media only screen and (max-width: 600px) {
-   
+@media only screen and (max-width: 850px) {
+   svg{
+    display: none;
+   }
+   #parent{
+    margin-top: none;
+  }
 
       
   }
